--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "create:migration": "npx sequelize-cli migration:generate --name migration-skeleton",
-    "db:migrate": "npx sequelize-cli db:migrate"
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "dev": "ts-node-dev --respawn --transpile-only server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
