--- a/package.json
+++ b/package.json
@@ -8,11 +8,25 @@
   "scripts": {
     "create:migration": "npx sequelize-cli migration:generate --name migration-skeleton",
     "db:migrate": "npx sequelize-cli db:migrate",
-    "dev": "ts-node-dev --respawn --transpile-only server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only server.ts",
+    "lint": "eslint src/**/*.ts",
+    "lint-fix": "eslint --fix src/**/*.ts",
+    "pretty": "prettier --write 'src/**/*.ts'",
+    "prepare": "husky install",
+    "precommit": "yarn lint-fix && yarn pretty",
+    "prepush": "yarn lint"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "eslint": "^8.28.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.2",
+    "prettier": "^2.7.1",
     "sequelize-cli": "^6.5.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
