--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "create:migration": "npx sequelize-cli migration:generate --name migration-skeleton",
     "db:migrate": "npx sequelize-cli db:migrate",
     "dev": "ts-node-dev --respawn --transpile-only server.ts",
-    "lint": "eslint src/**/*.ts",
-    "lint-fix": "eslint --fix src/**/*.ts",
-    "pretty": "prettier --write 'src/**/*.ts'",
+    "lint": "eslint .",
+    "lint-fix": "eslint --fix .",
+    "pretty": "prettier --write .",
     "prepare": "husky install",
     "precommit": "yarn lint-fix && yarn pretty",
     "prepush": "yarn lint"
@@ -32,6 +32,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "eslint-plugin-import": "^2.26.0",
     "express": "^4.18.2",
     "pg": "^8.8.0",
     "sequelize": "^6.25.6"
