--- a/.prettierrc
+++ b/.prettierrc
@@ -1,30 +1,27 @@
 {
-	"bracketSpacing": true,
-	"printWidth": 80,
-	"proseWrap": "preserve",
-	"semi": true,
-	"singleQuote": true,
-	"trailingComma": "all",
-	"tabWidth": 4,
-	"useTabs": true,
-	"parser": "typescript",
-	"arrowParens": "always",
-	"requirePragma": true,
-	"insertPragma": true,
-	"endOfLine": "auto",
-	"overrides": [
-		{
-			"files": "*.json",
-			"options": {
-				"singleQuote": false
-			}
-		},
-		{
-			"files": ".*rc",
-			"options": {
-				"singleQuote": false,
-				"parser": "json"
-			}
-		}
-	]
+    "arrowParens": "always",
+    "bracketSameLine": false,
+    "endOfLine": "auto",
+    "jsxSingleQuote": true,
+    "printWidth": 100,
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 4,
+    "useTabs": false,
+    "trailingComma": "all",
+    "overrides": [
+        {
+            "files": "*.json",
+            "options": {
+                "singleQuote": false
+            }
+        },
+        {
+            "files": ".*rc",
+            "options": {
+                "singleQuote": false,
+                "parser": "json"
+            }
+        }
+    ]
 }
