--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.14",
+        "@types/multer": "^1.4.7",
         "@types/node": "^18.11.9",
         "@typescript-eslint/eslint-plugin": "^5.43.0",
         "@typescript-eslint/parser": "^5.43.0",
@@ -35,6 +36,7 @@
         "eslint-plugin-import": "^2.26.0",
         "express": "^4.18.2",
         "pg": "^8.8.0",
-        "sequelize": "^6.25.6"
+        "sequelize": "^6.25.6",
+        "zod": "^3.19.1"
     }
 }
