--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
         "create:migration": "npx sequelize-cli migration:generate --name migration-skeleton",
         "db:migrate": "npx sequelize-cli db:migrate",
         "dev": "ts-node-dev --respawn --transpile-only server.ts",
+        "run-http": "http-server -S -C ../mysite.example.pem -K ../mysite.example-key.pem",
         "lint": "eslint .",
         "lint-fix": "eslint --fix .",
         "pretty": "prettier --write .",
@@ -20,6 +21,8 @@
         "@types/express": "^4.17.14",
         "@types/multer": "^1.4.7",
         "@types/node": "^18.11.9",
+        "@types/passport": "^1.0.11",
+        "@types/passport-google-oauth20": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^5.43.0",
         "@typescript-eslint/parser": "^5.43.0",
         "eslint": "^8.28.0",
@@ -33,8 +36,13 @@
         "typescript": "^4.9.3"
     },
     "dependencies": {
+        "axios": "^1.2.1",
+        "dotenv": "^16.0.3",
         "eslint-plugin-import": "^2.26.0",
         "express": "^4.18.2",
+        "http-server": "^14.1.1",
+        "passport": "^0.6.0",
+        "passport-google-oauth20": "^2.0.0",
         "pg": "^8.8.0",
         "sequelize": "^6.25.6",
         "zod": "^3.19.1"
